[doc] install-if-different
The variable name in the code is different as in the documentation.

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -99,7 +99,7 @@ download :
 
 #
 # versions : list of installed artifacts
-# they are used when installed-if-differently is set
+# they are used when install-if-different is set
 versions : (
 	{
 		name = "uboot";
