--- a/fs/Makefile
+++ b/fs/Makefile
@@ -2,6 +2,7 @@
 #
 # SPDX-License-Identifier: GPL-2.0-only
 
+lib-$(CONFIG_DISKFORMAT) += diskformat.o
 lib-$(CONFIG_FAT_FILESYSTEM) += diskio.o \
 				fat_fs.o \
 				ff.o
