--- a/fs/Config.in
+++ b/fs/Config.in
@@ -2,21 +2,20 @@
 #
 # SPDX-License-Identifier: GPL-2.0-only
 
+if DISKFORMAT
 config FAT_FILESYSTEM
 	bool "FAT file system creation support"
-	depends on DISKFORMAT
 	default n
 	help
 	  Enable support for creating FAT file systems.
 
 config EXT_FILESYSTEM
 	bool "EXT2 / EXT3 / EXT4 file system creation support"
-	depends on DISKFORMAT
 	depends on HAVE_LIBEXT2FS
 	default n
 	help
 	  Enable support for creating EXT file systems.
 
 comment "EXT2 / EXT3 / EXT4 file system creation support needs libext2fs"
-	depends on DISKFORMAT
 	depends on !HAVE_LIBEXT2FS
+endif
