delta: add handler for delta update
Large size or small bandwidth require to reduce the size of the
downloaded data. This implements a delta update using the zchunk project
as basis. The full documentation and design specification is in doc.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Kconfig
+++ b/Kconfig
@@ -117,6 +117,10 @@ config HAVE_URIPARSER
 	bool
 	option env="HAVE_URIPARSER"
 
+config HAVE_ZCK
+	bool
+	option env="HAVE_ZCK"
+
 menu "Swupdate Settings"
 
 menu "General Configuration"
