Import small multipart library
This is a lightweight parser for C licensed under MIT license. Sources
are available at https://github.com/iafonov/multipart-parser-c.

Fix a warning due to missing va_end() and set SPDX header.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/corelib/Makefile
+++ b/corelib/Makefile
@@ -2,6 +2,7 @@
 #
 # SPDX-License-Identifier:     GPL-2.0-only
 
+lib-y				+= multipart_parser.o
 lib-$(CONFIG_DOWNLOAD)		+= downloader.o
 lib-$(CONFIG_MTD)		+= mtd-interface.o
 lib-$(CONFIG_LUA)		+= lua_interface.o lua_compat.o
