example: userid and groupid in case of downloader
Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -82,6 +82,10 @@ logcolors : {
 #			  complete URL pointing to the SWU image of the update package
 # retries		: integer
 #			  Number of retries (0=forever)
+# userid		: integer
+#			  userID for Webserver process
+# groupid		: integer
+#			  groupId for Webserver process
 # timeout		: integer
 #			  it is the number of seconds that can be accepted without
 #			  receiving any packets. If it elapses, the connection is
@@ -95,6 +99,8 @@ download :
 	retries = 3;
 	timeout = 1800;
 	url = "http://example.com/software.swu";
+	userid		= 1000;
+	groupid		= 1000;
 };
 
 #
