channel_curl: Add maximum download speed limit
* Extend Suricatta and general server with options to set download speed
  limit.
* Add 'n' short and 'max-download-speed' long command line option for
  setting download speed limit.
* Add 'maximum-download-speed' option in configuration file.
* Document new feature and provide configuration file example.

Signed-off-by: Sava Jakovljev <sava.jakovljev@teufel.de>
Reviewed-by: Stefano Babic <sbabic@denx.de>

--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -176,6 +176,9 @@ identify : (
 #			  Specify server connection timeout. If no connection has been established in this
 #			  period, libcurl will consider connection unsuccessful.
 #			  Default value is determined by underlying libcurl implementation (300s).
+# max-download-speed : string
+#			  Specify maximum download speed to use. Value can be expressed as
+#			  B/s, kB/s, M/s, G/s. Example: 512k
 
 suricatta :
 {
@@ -192,6 +195,7 @@ suricatta :
 	enable		= true;
 	initial-report-resend-period = 30;
 	connection-timeout = 10;
+	max-download-speed = "1M";
 /*
 	cafile		= "/etc/ssl/cafile";
 	sslkey		= "/etc/ssl/sslkey";
