all_handlers_defconfig: add delta and unique
This is used for CI, so all handlers should be on.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/configs/all_handlers_defconfig
+++ b/configs/all_handlers_defconfig
@@ -10,23 +10,26 @@ CONFIG_SURICATTA=y
 CONFIG_SURICATTA_SSL=y
 CONFIG_WEBSERVER=y
 CONFIG_MONGOOSESSL=y
+CONFIG_ZSTD=y
 CONFIG_LUAEXTERNAL=y
-CONFIG_UBIVOL=y
+CONFIG_ARCHIVE=y
+CONFIG_BOOTLOADERHANDLER=y
 CONFIG_CFI=y
+CONFIG_DELTA=y
 CONFIG_DISKPART=y
-CONFIG_DISKFORMAT=y
+CONFIG_DISKPART_FORMAT=y
 CONFIG_DISKFORMAT_HANDLER=y
 CONFIG_FAT_FILESYSTEM=y
 CONFIG_EXT_FILESYSTEM=y
+CONFIG_LUASCRIPTHANDLER=y
+CONFIG_HANDLER_IN_LUA=y
 CONFIG_RAW=y
 CONFIG_RDIFFHANDLER=y
 CONFIG_READBACKHANDLER=y
-CONFIG_LUASCRIPTHANDLER=y
-CONFIG_SHELLSCRIPTHANDLER=y
-CONFIG_HANDLER_IN_LUA=y
-CONFIG_ARCHIVE=y
 CONFIG_REMOTE_HANDLER=y
+CONFIG_SHELLSCRIPTHANDLER=y
 CONFIG_SWUFORWARDER_HANDLER=y
-CONFIG_BOOTLOADERHANDLER=y
 CONFIG_SSBLSWITCH=y
+CONFIG_UBIVOL=y
 CONFIG_UCFWHANDLER=y
+CONFIG_UNIQUEUUID=y
