tools: add swupdate-gethawkbitstatus
Add example on how to retrieve the hawkBit sserver status from
Surricatta with the CMD_GET_STATUS IPC protocol.

Signed-off-by: Roland Gaudig <roland.gaudig@weidmueller.com>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -10,6 +10,7 @@
 
 lib-y += \
 	 swupdate-client.o \
+	 swupdate-gethawkbitstatus.o \
 	 swupdate-progress.o \
 	 swupdate-hawkbitcfg.o \
 	 swupdate-sendtohawkbit.o \
