gitignore: add tools/swupdate-gethawkbitstatus
Add tools/swupdate-gethawkbitstatus binary to .gitignore.

Signed-off-by: Roland Gaudig <roland.gaudig@weidmueller.com>

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ swupdate_unstripped*
 lua_swupdate.so*
 tools/*_unstripped
 tools/swupdate-client
+tools/swupdate-gethawkbitstatus
 tools/swupdate-progress
 tools/swupdate-sendtohawkbit
 tools/swupdate-hawkbitcfg
