swupdate-ipc: just one tool for IPC
This contains and replace most of the tools, including
	 swupdate-gethawkbitstatus
	 swupdate-hawkbitcfg
	 swupdate-sendtohawkbit
	 swupdate-sysrestart

The syntax for a single command is compatible with the past. Just run:

	swupdate-ipc <command>

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -14,7 +14,8 @@ lib-y += \
 	 swupdate-progress.o \
 	 swupdate-hawkbitcfg.o \
 	 swupdate-sendtohawkbit.o \
-	 swupdate-sysrestart.o
+	 swupdate-sysrestart.o \
+	 swupdate-ipc.o
 
 # # Uncomment the next lines to integrate the compiling/linking of
 # # any .c files placed alongside the above "official" tools in the
