--- a/examples/client/Pipfile
+++ b/examples/client/Pipfile
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2021 Blueye Robotics AS
+#
+# SPDX-License-Identifier: GPL-2.0-only
+
 [[source]]
 url = "https://pypi.org/simple"
 verify_ssl = true
