gitignore: add tools/swupdate-ipc and clean up
swupdate-ipc has been introduced in commit 1fe27b94a and now appears in
the untracked files section of `git status`.
To prevent committing this file by accident, I have added it to
gitignore. Further, I have removed the no longer existing tools from
gitignore.

Signed-off-by: Christian Storm <christian.storm@siemens.com>
Signed-off-by: Michael Adler <michael.adler@siemens.com>

--- a/.gitignore
+++ b/.gitignore
@@ -41,11 +41,8 @@ swupdate_unstripped*
 lua_swupdate.so*
 tools/*_unstripped
 tools/swupdate-client
-tools/swupdate-gethawkbitstatus
 tools/swupdate-progress
-tools/swupdate-sendtohawkbit
-tools/swupdate-hawkbitcfg
-tools/swupdate-sysrestart
+tools/swupdate-ipc
 tools/*.map
 tools/*.out
 
