test: Fix cross compilation issue
Use the right strip command of the underlying architecture.

Fixes the below error during cross compilation.
strip -N main -o /home/builder/swupdate/git/core/built-in.o.tmp /home/builder/swupdate/git/core/built-in.o
strip: Unable to recognise the format of the input file `/home/builder/swupdate/git/core/built-in.o'

Signed-off-by: Vijai Kumar K <Vijaikumar_Kanagarajan@mentor.com>
Acked-by: Stefano Babic <sbabic@denx.de>

--- a/test/Makefile
+++ b/test/Makefile
@@ -35,7 +35,7 @@ tests-lnk  = $(addsuffix .lnk, $(TARGETS))
 targets   += $(addsuffix .o,   $(tests-y))
 
 ifneq ($(CONFIG_EXTRA_LDFLAGS),)
-EXTRA_LDFLAGS += $(strip $(subst ",,$(CONFIG_EXTRA_LDFLAGS)))#"))
+EXTRA_LDFLAGS += $($(STRIP) $(subst ",,$(CONFIG_EXTRA_LDFLAGS)))#"))
 endif
 
 ## transfer __mock_*() functions to according linker flags via rudimentary regex awk parsing
@@ -68,7 +68,7 @@ tests:
 endif
 
 $(obj)/%.lnk: $(obj)/%.o $(objtree)/core/built-in.o
-	$(Q)strip -N main -o $(objtree)/core/built-in.o.tmp $(objtree)/core/built-in.o
+	$(Q)$(STRIP) -N main -o $(objtree)/core/built-in.o.tmp $(objtree)/core/built-in.o
 	$(Q)$(call cmd,linktestexe)
 
 DATADIR := test/data
