CI: run jobs in parallel on Gitlab
Also, explicitly set the stage.

Signed-off-by: Michael Adler <michael.adler@siemens.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,8 @@ ubuntu-focal:
     - if [ $CI_COMMIT_BRANCH == "coverity_scan" ]; then ./ci/coverity.sh;fi
     - ./ci/test-configs.sh
 reuse:
+  needs: []
+  stage: test
   image:
     name: fsfe/reuse:latest
     entrypoint: [""]
