Fix REUSE breakage from febca4c
Add SPDX id to .github/workflows/contributing.yml

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/.github/workflows/contributing.yml
+++ b/.github/workflows/contributing.yml
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2021 James Hilliard <james.hilliard1@gmail.com>
+#
+# SPDX-License-Identifier: MIT
+
 on:
   pull_request_target:
     types:
