--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -43,6 +43,11 @@
 #			  set expected common name of signer certificate
 # select:		: string
 #			  select software images set and source (<software>,<mode>)
+# bootloader:		: string
+#			  bootloader interface to use, overruling compile-time default.
+#			  Possible values are ebg, grub, uboot, and none for
+#			  EFI Boot Guard, U-Boot, GRUB, and the Environment in RAM bootloader,
+#			  respectively, given the respective bootloader support is compiled-in.
 globals :
 {
 
