--- a/Makefile.flags
+++ b/Makefile.flags
@@ -210,7 +210,7 @@ LDLIBS += gpiod
 endif
 
 ifeq ($(CONFIG_UBOOT),y)
-LDLIBS += z ubootenv
+LDLIBS += dl
 endif
 
 ifeq ($(CONFIG_SYSTEMD),y)
@@ -218,7 +218,20 @@ LDLIBS += systemd
 endif
 
 ifeq ($(CONFIG_BOOTLOADER_EBG),y)
-LDLIBS += ebgenv z
+LDLIBS += dl
+endif
+
+ifneq ($(CONFIG_BOOTLOADER_DEFAULT_NONE),)
+KBUILD_CPPFLAGS += -DBOOTLOADER_DEFAULT="none"
+endif
+ifneq ($(CONFIG_BOOTLOADER_DEFAULT_GRUB),)
+KBUILD_CPPFLAGS += -DBOOTLOADER_DEFAULT="grub"
+endif
+ifneq ($(CONFIG_BOOTLOADER_DEFAULT_UBOOT),)
+KBUILD_CPPFLAGS += -DBOOTLOADER_DEFAULT="uboot"
+endif
+ifneq ($(CONFIG_BOOTLOADER_DEFAULT_EBG),)
+KBUILD_CPPFLAGS += -DBOOTLOADER_DEFAULT="ebg"
 endif
 
 # SWU forwarder
