--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -2,7 +2,7 @@
 #
 # SPDX-License-Identifier:     GPL-2.0-only
 #
-lib-$(CONFIG_UBOOT)		+= uboot.o
-lib-$(CONFIG_BOOTLOADER_NONE)	+= none.o
-lib-$(CONFIG_BOOTLOADER_GRUB)	+= grub.o
-lib-$(CONFIG_BOOTLOADER_EBG)		+= ebg.o
+obj-$(CONFIG_UBOOT)		+= uboot.o
+obj-$(CONFIG_BOOTLOADER_NONE)	+= none.o
+obj-$(CONFIG_BOOTLOADER_GRUB)	+= grub.o
+obj-$(CONFIG_BOOTLOADER_EBG)	+= ebg.o
