bootloader: fallback to bootloader 'none'
If no bootloader is selected, fallback to bootloader 'none'. This
is strictly required as SWUpdate calls bootloader_env_* functions
while normal installation.

Signed-off-by: Christian Storm <christian.storm@siemens.com>

--- a/Makefile.flags
+++ b/Makefile.flags
@@ -221,17 +221,16 @@ ifeq ($(CONFIG_BOOTLOADER_EBG),y)
 LDLIBS += dl
 endif
 
-ifneq ($(CONFIG_BOOTLOADER_DEFAULT_NONE),)
+ifeq ($(CONFIG_BOOTLOADER_DEFAULT_NONE),y)
 KBUILD_CPPFLAGS += -DBOOTLOADER_DEFAULT="none"
-endif
-ifneq ($(CONFIG_BOOTLOADER_DEFAULT_GRUB),)
+else ifeq ($(CONFIG_BOOTLOADER_DEFAULT_GRUB),y)
 KBUILD_CPPFLAGS += -DBOOTLOADER_DEFAULT="grub"
-endif
-ifneq ($(CONFIG_BOOTLOADER_DEFAULT_UBOOT),)
+else ifeq ($(CONFIG_BOOTLOADER_DEFAULT_UBOOT),y)
 KBUILD_CPPFLAGS += -DBOOTLOADER_DEFAULT="uboot"
-endif
-ifneq ($(CONFIG_BOOTLOADER_DEFAULT_EBG),)
+else ifeq ($(CONFIG_BOOTLOADER_DEFAULT_EBG),y)
 KBUILD_CPPFLAGS += -DBOOTLOADER_DEFAULT="ebg"
+else
+KBUILD_CPPFLAGS += -DBOOTLOADER_DEFAULT="none"
 endif
 
 # SWU forwarder
