--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -6,3 +6,12 @@ obj-$(CONFIG_UBOOT)		+= uboot.o
 obj-$(CONFIG_BOOTLOADER_NONE)	+= none.o
 obj-$(CONFIG_BOOTLOADER_GRUB)	+= grub.o
 obj-$(CONFIG_BOOTLOADER_EBG)	+= ebg.o
+
+# Make sure none.o is compiled-in as fallback.
+ifeq ($(CONFIG_UBOOT),)
+ifeq ($(CONFIG_BOOTLOADER_GRUB),)
+ifeq ($(CONFIG_BOOTLOADER_EBG),)
+obj-y	+= none.o
+endif
+endif
+endif
