--- a/examples/configuration/swupdate.cfg
+++ b/examples/configuration/swupdate.cfg
@@ -18,7 +18,7 @@
 #	 		  enable sending logs to syslog daemon
 # public-key-file	: string
 #			  file with public key for
-#			  image verification 
+#			  image verification
 # mtd-blacklist		: list integers
 #			  MTD devices where SWUpdate
 #			  must not try to check for UBI filesystem.
@@ -110,7 +110,7 @@ download :
 
 #
 # versions : list of installed artifacts
-# they are used when installed-if-differently is set
+# they are used when install-if-different is set
 versions : (
 	{
 		name = "uboot";
@@ -134,7 +134,7 @@ identify : (
 	{ name = "swCompatibility"; value = "unknown";}
 );
 
-# 
+#
 # suricatta section: setup for backend
 #
 # Currently, they refer to the Hawkbit agent.
