ci: added Ubuntu Jammy
Ubuntu Jammy is the latest LTS release (supported until 2027),
which contains more recent packages. Testing against more recent libs
ensures we do not rely on any deprecated APIs.

Signed-off-by: Michael Adler <michael.adler@siemens.com>
Signed-off-by: Christian Storm <christian.storm@siemens.com>
Reviewed-by: Stefano Babic <sbabic@denx.de>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,16 @@ ubuntu-focal:
   script:
     - if [ $CI_COMMIT_BRANCH == "coverity_scan" ]; then ./ci/coverity.sh;fi
     - ./ci/test-configs.sh
+
+ubuntu-jammy:
+  image: ubuntu:jammy
+  stage: build
+  before_script:
+    - ./ci/setup.sh
+    - ./ci/install-src-deps.sh
+  script:
+    - ./ci/test-configs.sh
+
 reuse:
   needs: []
   stage: test
