--- a/suricatta/Makefile
+++ b/suricatta/Makefile
@@ -5,4 +5,7 @@ lib-$(CONFIG_SURICATTA) += suricatta.o common.o
 ifneq ($(CONFIG_SURICATTA_HAWKBIT),)
 lib-$(CONFIG_SURICATTA) += server_hawkbit.o
 endif
+ifneq ($(CONFIG_SURICATTA_LUA),)
+lib-$(CONFIG_SURICATTA) += server_lua.o
+endif
 lib-$(CONFIG_SURICATTA_GENERAL) += server_general.o
