--- a/Makefile.flags
+++ b/Makefile.flags
@@ -233,6 +233,18 @@ else
 KBUILD_CPPFLAGS += -DBOOTLOADER_DEFAULT="none"
 endif
 
+ifneq ($(CONFIG_SURICATTA),)
+ifneq ($(CONFIG_SURICATTA_LUA),)
+ifneq ($(CONFIG_EMBEDDED_SURICATTA_LUA),)
+ifneq ($(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE),)
+LDFLAGS_swupdate += -Wl,--format=binary -Wl,$(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE) -Wl,--format=default
+KBUILD_CPPFLAGS += -DEMBEDDED_SURICATTA_LUA_SOURCE_START="_binary_$(subst ",,$(subst .,_,$(subst /,_,$(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE))))_start"
+KBUILD_CPPFLAGS += -DEMBEDDED_SURICATTA_LUA_SOURCE_END="_binary_$(subst ",,$(subst .,_,$(subst /,_,$(CONFIG_EMBEDDED_SURICATTA_LUA_SOURCE))))_end"	
+endif
+endif
+endif
+endif
+
 # SWU forwarder
 ifneq ($(CONFIG_SWUFORWARDER_HANDLER),)
 LDLIBS += websockets uriparser
