Introduce generic copy handler
The current "rawcopy" handler is quite limited. It just works as "raw"
handler. One common use case is to orvide a copy from a MTD device, and
then it is useless. Add a copy handler that runs in a chain another
handler, like "flash", so that any handler can be reused.

Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/handlers/Config.in
+++ b/handlers/Config.in
@@ -60,6 +60,14 @@ config CFIHAMMING1
 
 	  You do not need this if you do not have an OMAP SoC.
 
+config COPY
+	bool "copy"
+	default n
+	help
+	  This works as script and copies files / images to a
+	  different destination. It requires a chained handler
+	  so that it works even with flash or special devices.
+
 config DELTA
 	bool "delta"
 	depends on HAVE_LIBCURL
