Kconfig: Add HAVE_LIBUBOOTENV and HAVE_LIBEBGENV
Allow passing through the environment if libubootenv or libebgenv
are available for the build target.

Defaults to yes because we do not do any library checking for now.

Signed-off-by: James Hilliard <james.hilliard1@gmail.com>
Signed-off-by: Stefano Babic <sbabic@denx.de>

--- a/Kconfig
+++ b/Kconfig
@@ -53,6 +53,14 @@ config HAVE_LIBUBI
 	bool
 	option env="HAVE_LIBUBI"
 
+config HAVE_LIBUBOOTENV
+	bool
+	option env="HAVE_LIBUBOOTENV"
+
+config HAVE_LIBEBGENV
+       bool
+       option env="HAVE_LIBEBGENV"
+
 config HAVE_LIBEXT2FS
 	bool
 	option env="HAVE_LIBEXT2FS"
