--- a/bootloader/Config.in
+++ b/bootloader/Config.in
@@ -14,15 +14,23 @@ config BOOTLOADER_NONE
 
 config BOOTLOADER_EBG
 	bool "EFI Boot Guard"
+	depends on HAVE_LIBEBGENV
 	help
 	  Support for EFI Boot Guard
 	  https://github.com/siemens/efibootguard
 
+comment "EFI Boot Guard needs libebgenv and libz"
+	depends on !HAVE_ZLIB || !HAVE_LIBEBGENV
+
 config UBOOT
 	bool "U-Boot"
+	depends on HAVE_LIBUBOOTENV
 	help
 	  Support for U-Boot
 	  https://www.denx.de/wiki/U-Boot
+
+comment "U-Boot needs libubootenv"
+	depends on !HAVE_LIBUBOOTENV
 
 config UBOOT_FWENV
 	string "U-Boot Environment Configuration file"
