bootloader: EBG: Complete rework
Completely rework the EFI Boot Guard Binding accommodating to
libebgenv's implicit assumptions and actions. To this end,
environment modification transactions are introduced.
The assumptions and rationale is documented and in addition
log messages are emitted for particular combinations of
bootloader_transaction_marker and bootloader_state_marker.

Signed-off-by: Christian Storm <christian.storm@siemens.com>

--- a/configs/bootloader_ebg_defconfig
+++ b/configs/bootloader_ebg_defconfig
@@ -7,6 +7,8 @@ CONFIG_SW_VERSIONS_FILE="tests/etc/sw-versions"
 # CONFIG_MTD is not set
 CONFIG_LUAPKG="lua5.2"
 CONFIG_EXTRA_CFLAGS="-g"
+CONFIG_UPDATE_STATE_CHOICE_BOOTLOADER=y
+CONFIG_UPDATE_STATE_BOOTLOADER="ustate"
 CONFIG_BOOTLOADER_EBG=y
 CONFIG_DOWNLOAD=y
 CONFIG_WEBSERVER=y
