--- a/configs/with_ebg_defconfig
+++ b/configs/with_ebg_defconfig
@@ -4,6 +4,8 @@ CONFIG_HW_COMPATIBILITY=y
 # CONFIG_MTD is not set
 CONFIG_LUAPKG="lua5.2"
 CONFIG_EXTRA_CFLAGS="-g"
+CONFIG_UPDATE_STATE_CHOICE_BOOTLOADER=y
+CONFIG_UPDATE_STATE_BOOTLOADER="ustate"
 CONFIG_BOOTLOADER_EBG=y
 CONFIG_DOWNLOAD=y
 CONFIG_WEBSERVER=y
