fix: parallel test error
Multiple %.lnk targets have race condition on the file built-in.o.tmp,
if they are executed parallelly. This commit moves the common part to a
new target.

Signed-off-by: Zhibin Dong <zhibin.dong@siemens.com>
Reviewed-by: Stefano Babic <sbabic@denx.de>

--- a/test/Makefile
+++ b/test/Makefile
@@ -68,8 +68,10 @@ tests:
 	@:
 endif
 
-$(obj)/%.lnk: $(obj)/%.o $(objtree)/core/built-in.o
+$(objtree)/core/built-in.o.tmp: $(objtree)/core/built-in.o
 	$(Q)$(STRIP) -N main -o $(objtree)/core/built-in.o.tmp $(objtree)/core/built-in.o
+
+$(obj)/%.lnk: $(obj)/%.o $(objtree)/core/built-in.o.tmp
 	$(Q)$(call cmd,linktestexe)
 
 DATADIR := test/data
